# flaskProjectGigVospit

./: .dockerignore  .gitignore  Dockerfile  app.py  check_dll.bat  docker-compose.yaml  example.db  pyproject.toml  requirements.txt  start_guide.txt  to_do_list.txt  справочники.xlsx
MANUALS/: SELECTEL_DEPLOY_INFO.txt  dockerization manual.txt  start_guide.txt  to_do_list.txt
config/: config.py  db_conf_pg.txt  example.db
database/: __init__.py  database.py  db_instance.py  db_manager.py
forms/: forms.py
functions/: __init__.py  access_control.py  data_fix.py  date_validator.py  default_data_autofill.py  ip_address.py  merge_update_dfs.py  parser_functs.py  simple_checks.py  thread_decor.py
functions/default_db_data/: default_data_autofill.py  parser_functs.py
functions/validators/: date_validator.py  med_book_validator.py  snils_validator.py
instance/: example.db
json/access/: access_control.json
json/default_db_data/: access_setting.json  applicant_type.json  attestation_type.json  backup_settings.json  contingent.json  department.json  organization.json  role.json  status.json  table_db.json  work_field.json
migrations/versions/: 81cc2b4df327_fix_vizit_and_relationships.py
models/: __init__.py  applicant.py  attestation_type.py  contingent.py  department.py  models.py  role.py  status.py  user.py
routers/: __init__.py  applicants.py  backup_settings.py  contracts.py  forms.py  organizations.py  routes.py  secur.py  settings.py  users.py  visits.py
sql_queries/: appli_vizits_relation_table.sql  contr_vizit_fio_1.sql  drop_all_tables.sql
static/: styles.css
static/css/: styles.css
static/js/: active_setting_rb.js  (+12 more)
templates/: _helpers.html  add_applicant.html  add_contract.html  add_organization.html  add_user.html  applicant_details.html  base.html  contract_details.html  edit_applicant.html  edit_contract.html  edit_organization.html  hello.html  index.html  login.html  manage_orgs.html  organization_details.html  register.html  search_applicants.html  search_contracts.html  user_details.html  user_form.html  user_list.html
tests/: test_models.py
(+27 files in other folders)
