[tool.poetry]
name = "flaskprojectgigvospit"
version = "0.1.0"
description = "this is education project for trying to create application for hygien education job"
authors = ["Tabakaev Mihail <mihakgma86@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.8"
flask = "^2.2.2"
sqlalchemy = "^2.0.40"
psycopg2-binary = "^2.9.10"
werkzeug = "2.2.2"
wtforms = "3.0.0"
waitress = "2.1.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
