[tool.poetry]
name = "flaskprojectgigvospit"
version = "0.1.0"
description = "this is education project for trying to create application for hygien education job"
authors = ["Tabakaev Mihail <mihakgma86@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.8.10"
flask = "2.3.2"
psycopg2-binary = "2.9.10"
werkzeug = "3.0.6"
wtforms = "3.0.0"
waitress = "2.1.2"
flask-wtf = "1.2.1"
Flask-SQLAlchemy = "3.1.1"
email-validator = "2.2.0"
sqlalchemy = "2.0.40"
flask-login = "0.6.3"
flask-migrate = "4.1.0"
wtforms-sqlalchemy = "0.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
