[tool.poetry]
name = "flaskprojectgigvospit"
version = "0.1.0"
description = "this is an application for hygien education job"
authors = ["Tabakaev Mihail <mihakgma86@hotmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "3.8.10"
flask = "2.3.2"
werkzeug = "3.0.6"
wtforms = "3.0.0"
waitress = "2.1.2"
flask-wtf = "1.2.1"
Flask-SQLAlchemy = "3.1.1"
email-validator = "2.2.0"
sqlalchemy = "2.0.40"
flask-login = "0.6.3"
flask-migrate = "4.1.0"
wtforms-sqlalchemy = "0.3"
flask-script = "2.0.6"
sqlalchemy-utils = "0.41.2"
psycopg2 = "2.8.6"
psycopg2-binary = "2.8.6"
numpy = "1.21.0"
scipy = "1.7.0"
pandas = "1.5.3"
openpyxl = "3.1.0"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
